# sln_parser

./: Cargo.toml  readme.md
samples/: Files..json  Files.dot  ShortcutMaker.sln  files.json
src/: arguments.rs  constants.rs  dot_formatter.rs  file_reader.rs  json_formatter.rs  main.rs  mermaid_formatter.rs  parser.rs  plantuml_formatter.rs  sln_parser.rs  solution_formatter.rs  structures.rs
src/formatters/: dot_formatter.rs  json_formatter.rs  mermaid_formatter.rs  mod.rs  plantuml_formatter.rs  solution_formatter.rs
src/parser/: additional_dependency_parser.rs  header_parser.rs  mod.rs  sln_parser.rs
